# ChannelGenerator

./: .gitignore  README.md  config.toml.example  pyproject.toml
.github/workflows/: discover.yml
channel_generator/: __init__.py  analyzer.py  cli.py  config.py  fetcher.py  keyword_generator.py  llm_client.py  pipeline.py  recursive_crawler.py  reporter.py  state.py  summarizer.py  url_selector.py
channel_generator/sources/: __init__.py  bing_search.py  firecrawl.py  github.py  google_search.py  hackernews.py  reddit.py
tests/: test_analyzer.py  test_bing_search.py  test_cli.py  test_config.py  test_fetcher.py  test_google_search.py  test_keyword_generator.py  test_llm_client.py  test_pipeline.py  test_reporter.py  test_state.py  test_summarizer.py  test_url_selector.py
