[project]
name = "channel-generator"
version = "0.1.0"
description = "AI-driven discovery of free LLM chat channels"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ChannelGenerator Contributors" }]
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "openai>=1.35.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
]

[project.scripts]
channel-generator = "channel_generator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
